--- a/Hangfire.Extension.Example/Hangfire.Extension.Example.csproj
+++ b/Hangfire.Extension.Example/Hangfire.Extension.Example.csproj
@@ -18,6 +18,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="jobs.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
