--- a/Hangfire.Extension/Hangfire.Extension.csproj
+++ b/Hangfire.Extension/Hangfire.Extension.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="HangFire" Version="1.7.11" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
   </ItemGroup>
 
